Personal_Website/overlays/example/ns.yml
apiVersion: v1
kind: Namespace
metadata:
  name: personal-website
  labels:
    istio-injection: enabled
