Personal_Website/overlays/example/gw.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: personal-website
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "nix.sol.milkyway"
