Personal_Website/overlays/example/vs.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: personal-website
spec:
  hosts:
    - tks-ing.sol.milkyway
  gateways:
    - personal-website
  http:
    - match:
      - uri:
          prefix: "/website"
      rewrite:
        uri: "/"
      route:
        - destination:
            host: personal-website
            port:
              number: 80
